--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
-.container{
-  display:flex;
-  flex-direction:column;
-  align-items:center;
- 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer-section {
+  text-align: center;
 }
